update-manager (1:0.73) gutsy; urgency=low

  * UpdateManager/UpdateManager.py:
    - display new installs in the list
  * DistUpgrade/DistUpgradeControler.py:
    - check trust of pre-requists files before downloading them

 --

update-manager (1:0.72) gutsy; urgency=low

  * UpdateManager/Core/MetaRelease.py:
    - fix target filename for meta-release files so that 
      correct I-M-S information is used
  * DistUpgrade/DistUpgrade.cfg:
    - use "release-upgrader-dpkg", "release-upgrader-apt" as
      update-pre-requists to fully support dpkg triggers (LP: #134000)
    - add mythubuntu-desktop to the valid metapackages
  * DistUpgrade/DistUpgradeControler.py:
    - fix pre-requists fetching, do not run the resolver as the udebss
      are not installable on a regular system
    - generate more log information to make diagnosing problems easier
    - setup RELEASE_UPGRADE_IN_PROGRESS environemnt
    - use custom invoke-rc.d during the upgrade so that failures to
      restart a daemon are not fatal
  * DistUpgrade/prerequists-sources.list:
    - point to the archive for the pre-requists now

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 07 Sep 2007 23:29:40 +0200

update-manager (1:0.71) gutsy; urgency=low

  [ Michel Vogt ]
  * DistUpgrade/DistUpgradeViewGtk.py:
    - fix crash in _terminal_log code
  * DistUpgrade/DistUpgradeControler.py:
    - disable archive.canonical.com for now until
      a gutsy repository is created there
    - fix size requirement reporting (LP: #137539)

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py
    - Implement show/hide button on conf file dialogue
  * DistUpgrade/removal_blacklist.cfg
    - Add xubuntu-desktop and gobuntu-desktop

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 05 Sep 2007 19:16:56 +0200

update-manager (1:0.70) gutsy; urgency=low

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py
    - Use apport for crashes
    - Don't use dcop, it doesn't work with kdesudo
    - Fix UI layout
