@@ -2,6 +2,10 @@ update-manager (1:0.73) gutsy; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - display new installs in the list
+  * UpdateManager/Common/utils.py:
+    - fix countrymirror to deal with non-utf8 locales (LP: #138299)
+  * tests/test_update_origin.py:
+    - added test for this country_mirror()
   * DistUpgrade/DistUpgradeControler.py:
     - check trust of pre-requists files before downloading them
 
